# Science-Work-Flow-

./: .gitignore  README.md  pyproject.toml
cambagent_eval/: __init__.py
configs/experiments/: baseline.json
configs/experiments/trials/: 01_sanity_baseline.json  02_backbone_model_ablation.json  03_grounding_ablation.json  04_robustness_stress_test.json  05_workflow_comparison.json  06_failure_taxonomy_audit.json
configs/tasks/: cmb_joint_inference.json  cmb_lcdm_precision.json  exoplanet_inference.json
docs/: architecture.md  cmbagent_opengauss_agent_structure_report.aux  cmbagent_opengauss_agent_structure_report.fdb_latexmk  cmbagent_opengauss_agent_structure_report.fls  cmbagent_opengauss_agent_structure_report.out  cmbagent_opengauss_agent_structure_report.tex  data_science_bridge.md  local_agent_runbook.md  open_agents_quickstart.md  proposal_explainer.md  proposal_mapping.md  trace_based_architecture_research_report.md  trial_evaluation_modes.md
notebooks/: 01_lab_proposal_experiment.ipynb
projects/: README.md
references/clear/: README.md
references/evaluation/: Plan by CHATGPT.txt
references/lean/: README.md
scripts/: build_agent_structure_report.ps1  install_global_vscode_latex_fix.ps1  latexmk-local.cmd
src/cambagent_eval/: __init__.py  agents.py  cli.py  config.py  metrics.py  models.py  pipeline.py  taxonomy.py  workflows.py
tests/: test_cli.py  test_config.py  test_pipeline.py
