[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "cambagent-eval"
version = "0.1.0"
description = "Evaluation scaffold for LLM-based scientific agents in astrophysical workflows."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "OpenAI Codex" }
]
dependencies = []

[project.optional-dependencies]
agents = [
  "openai>=1.0.0"
]
scientific = [
  "numpy>=1.26",
  "scipy>=1.12",
  "emcee>=3.1",
  "camb>=1.5"
]
dev = [
  "pytest>=8.0",
  "ruff>=0.6"
]

[project.scripts]
cambagent-eval = "cambagent_eval.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

