[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "cambagent-eval"
version = "0.1.0"
description = "Evaluation scaffold for LLM-based scientific agents in astrophysical workflows."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "OpenAI Codex" }
]
dependencies = []

[project.optional-dependencies]
notebook = [
  "ipykernel>=6.29",
  "jupyterlab>=4.2",
  "matplotlib>=3.8",
  "pandas>=2.2"
]
dev = [
  "pytest>=8.0",
  "ruff>=0.6"
]

[project.scripts]
cambagent-eval = "cambagent_eval.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
